# keeperfx-launcher-qt

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Dockerfile.win64  Dockerfile.win64s  README.md  apiclient.cpp  apiclient.h  app.rc  calculate-translations.php  calculate-translations.sh  clickablehighlightedwidget.cpp  clickablehighlightedwidget.h  compile-win64s.sh  compile-windows.sh  compile-windows.sh-old  copydkfilesdialog.cpp  copydkfilesdialog.h  copydkfilesdialog.ui  crc32.h  cspell.json  dkfiles.cpp  dkfiles.h  downloader.cpp  downloader.h  fileremover.h  fileremoverdialog.h  files-to-remove.txt  generate-contributor-list.sh  generate-launcher-translator-list.sh  generate-translations.sh  grab-translations.sh  installkfxdialog.cpp  installkfxdialog.h  installkfxdialog.ui  kfxversion.cpp  kfxversion.h  launcher-auto-file-removal.txt  launchermainwindow.cpp  (+24 more)
docs/: translating.md  translations.md
i18n/: qt.pot  translations.pot  translations_cs.po  translations_de.po  translations_es.po  translations_fr.po  translations_it.po  translations_ja.po  translations_ko.po  translations_nl.po  translations_pl.po  translations_pt.po  translations_ru.po  translations_uk.po  translations_zh-Hans.po  translations_zh-hans.po
res/: contributors.txt  discord-button.css  launcher-translators.txt
res/cert/: release_certificate_2025.cer  test_certificate.cer
res/play-button-theme/: dk-orange.css
src/: apiclient.cpp  apiclient.h  archiver.cpp  archiver.h  campaign.cpp  campaign.h  certificate.cpp  certificate.h  clickablelabel.h  copydkfilesdialog.cpp  crashdialog.cpp  crashdialog.h  crc32.h  directconnectdialog.cpp  directconnectdialog.h  dkfiles.cpp  dkfiles.h  downloader.cpp  downloader.h  downloadmusicdialog.cpp  downloadmusicdialog.h  enetlanscanner.h  enetservertestdialog.cpp  enetservertestdialog.h  extractor.cpp  extractor.h  fileremover.h  fileremoverdialog.cpp  game.cpp  game.h  gzip.h  helper.h  imagehelper.h  installkfxdialog.cpp  installkfxdialog.h  kfxversion.cpp  kfxversion.h  launchermainwindow.cpp  launchermainwindow.h  launcheroptions.cpp  (+38 more)
ui/: copydkfilesdialog.ui  crashdialog.ui  directconnectdialog.ui  downloadmusicdialog.ui  enetservertestdialog.ui  fileremoverdialog.ui  installkfxdialog.ui  launchermainwindow.ui  modmanagerdialog.ui  modwidget.ui  newsarticlewidget.ui  runpacketfiledialog.ui  scannetworkdialog.ui  settingsdialog.ui  updatedialog.ui  workshopitemwidget.ui
